tm-core/tests/snapshots/emit_svg__svg_home_day.snap
---
source: tm-core/tests/emit_svg.rs
expression: out
---
<svg xmlns="http://www.w3.org/2000/svg" width="960" height="48" viewBox="0 0 960 48" role="img" aria-label="day bar 2026-09-07">
<defs>
<pattern id="tm-lost" width="6" height="6" patternUnits="userSpaceOnUse" patternTransform="rotate(45)"><rect width="6" height="6" fill="#fdecd9"/><line x1="0" y1="0" x2="0" y2="6" stroke="#f58231" stroke-width="3"/></pattern>
<pattern id="tm-interrupt" width="6" height="6" patternUnits="userSpaceOnUse" patternTransform="rotate(45)"><rect width="6" height="6" fill="#fadfe5"/><line x1="0" y1="0" x2="0" y2="6" stroke="#e6194b" stroke-width="3"/></pattern>
</defs>
<rect x="0" y="0" width="960" height="48" fill="#f7f7f7"/>
<g class="plan">
<rect x="76.67" y="0" width="40" height="37.44" fill="#57126c"><title>Claude Code drafts tests · 1h · ci3 · p3 · @O2</title></rect>
<rect x="116.67" y="0" width="13.33" height="37.44" fill="#d2d2d2"><title>break · 20m</title></rect>
<rect x="130" y="0" width="40" height="37.44" fill="#57126c"><title>Review the drafts · 1h · ci3 · p3 · @O2</title></rect>
<rect x="170" y="0" width="40" height="37.44" fill="#30903c"><title>Exercises 5.3–5.5 · 1h · ci4 · p1 · @O1</title></rect>
<rect x="216.67" y="0" width="20" height="37.44" fill="#8a8a8a"><title>lunch · 30m · ci1</title></rect>
<rect x="236.67" y="0" width="33.33" height="37.44" fill="#4c601c"><title>batch: Insurance claim for the bike · Call the bank about the card (2) · 50m · ci2 · p3</title></rect>
<rect x="276.67" y="0" width="40" height="37.44" fill="#3cb44b"><title>Read ch.6 §1–2 · 1h · ci5 · p1 · @O1</title></rect>
<rect x="316.67" y="0" width="13.33" height="37.44" fill="#d2d2d2"><title>break · 20m</title></rect>
<rect x="330" y="0" width="40" height="37.44" fill="#3cb44b"><title>Read ch.6 §3 · 1h · ci5 · p1 · @O1</title></rect>
<rect x="370" y="0" width="13.33" height="37.44" fill="#0d2a31"><title>Pick up package · 20m · ci1 · p0</title></rect>
<rect x="456.67" y="0" width="20" height="37.44" fill="#8a8a8a"><title>dinner · 30m · ci1</title></rect>
<rect x="616.67" y="0" width="20" height="37.44" fill="#1b1f2a"><title>wind-down · 30m</title></rect>
<rect x="636.67" y="0" width="323.33" height="37.44" fill="#1b1f2a"><title>sleep · 8h30m · ci0</title></rect>
</g>
<g class="ticks" font-family="monospace" font-size="9" fill="#666">
<line x1="36.67" y1="0" x2="36.67" y2="37.44" stroke="#000" stroke-opacity="0.12" stroke-width="1"/>
<line x1="76.67" y1="0" x2="76.67" y2="37.44" stroke="#000" stroke-opacity="0.12" stroke-width="1"/>
<line x1="116.67" y1="0" x2="116.67" y2="37.44" stroke="#000" stroke-opacity="0.12" stroke-width="1"/>
<text x="116.67" y="46" text-anchor="middle">09</text>
<line x1="156.67" y1="0" x2="156.67" y2="37.44" stroke="#000" stroke-opacity="0.12" stroke-width="1"/>
<line x1="196.67" y1="0" x2="196.67" y2="37.44" stroke="#000" stroke-opacity="0.12" stroke-width="1"/>
<line x1="236.67" y1="0" x2="236.67" y2="37.44" stroke="#000" stroke-opacity="0.12" stroke-width="1"/>
<text x="236.67" y="46" text-anchor="middle">12</text>
<line x1="276.67" y1="0" x2="276.67" y2="37.44" stroke="#000" stroke-opacity="0.12" stroke-width="1"/>
<line x1="316.67" y1="0" x2="316.67" y2="37.44" stroke="#000" stroke-opacity="0.12" stroke-width="1"/>
<line x1="356.67" y1="0" x2="356.67" y2="37.44" stroke="#000" stroke-opacity="0.12" stroke-width="1"/>
<text x="356.67" y="46" text-anchor="middle">15</text>
<line x1="396.67" y1="0" x2="396.67" y2="37.44" stroke="#000" stroke-opacity="0.12" stroke-width="1"/>
<line x1="436.67" y1="0" x2="436.67" y2="37.44" stroke="#000" stroke-opacity="0.12" stroke-width="1"/>
<line x1="476.67" y1="0" x2="476.67" y2="37.44" stroke="#000" stroke-opacity="0.12" stroke-width="1"/>
<text x="476.67" y="46" text-anchor="middle">18</text>
<line x1="516.67" y1="0" x2="516.67" y2="37.44" stroke="#000" stroke-opacity="0.12" stroke-width="1"/>
<line x1="556.67" y1="0" x2="556.67" y2="37.44" stroke="#000" stroke-opacity="0.12" stroke-width="1"/>
<line x1="596.67" y1="0" x2="596.67" y2="37.44" stroke="#000" stroke-opacity="0.12" stroke-width="1"/>
<text x="596.67" y="46" text-anchor="middle">21</text>
<line x1="636.67" y1="0" x2="636.67" y2="37.44" stroke="#000" stroke-opacity="0.12" stroke-width="1"/>
<line x1="676.67" y1="0" x2="676.67" y2="37.44" stroke="#000" stroke-opacity="0.12" stroke-width="1"/>
<line x1="716.67" y1="0" x2="716.67" y2="37.44" stroke="#000" stroke-opacity="0.12" stroke-width="1"/>
<text x="716.67" y="46" text-anchor="middle">00</text>
<line x1="756.67" y1="0" x2="756.67" y2="37.44" stroke="#000" stroke-opacity="0.12" stroke-width="1"/>
<line x1="796.67" y1="0" x2="796.67" y2="37.44" stroke="#000" stroke-opacity="0.12" stroke-width="1"/>
<line x1="836.67" y1="0" x2="836.67" y2="37.44" stroke="#000" stroke-opacity="0.12" stroke-width="1"/>
<text x="836.67" y="46" text-anchor="middle">03</text>
<line x1="876.67" y1="0" x2="876.67" y2="37.44" stroke="#000" stroke-opacity="0.12" stroke-width="1"/>
<line x1="916.67" y1="0" x2="916.67" y2="37.44" stroke="#000" stroke-opacity="0.12" stroke-width="1"/>
<line x1="956.67" y1="0" x2="956.67" y2="37.44" stroke="#000" stroke-opacity="0.12" stroke-width="1"/>
<text x="956.67" y="46" text-anchor="middle">06</text>
</g>
<line class="cursor" x1="184.67" y1="0" x2="184.67" y2="37.44" stroke="#111" stroke-width="1.5"/>
<text class="cursor-label" x="187.67" y="18.72" font-family="monospace" font-size="9" fill="#111">10:42</text>
</svg>
